# kitchen-sink

./: .bazelrc  .clippy.toml  .editorconfig  .envrc  .gitattributes  .gitignore  .rubocop.yml  .shellcheckrc  BUILD  BUILD.bazel  MODULE.aspect  MODULE.bazel  README.md  REPO.bazel  eslint.config.mjs  gazelle_python.yaml  go.mod  ktlint-baseline.xml  maven_install.json  package.json  pmd.xml  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  pyproject.toml
.aspect/: config.axl  version.axl
.aspect/gazelle/: go_image.axl  package-json-scripts.axl  py3_image.axl  shell.axl
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
bazel/oci/: py3_image.bzl
githooks/: check-config.sh  pre-commit
hello/go/: BUILD.bazel
hello/java/: BUILD.bazel
requirements/: BUILD  README.md  all.in  all.txt  test.in  tools.in
tools/: BUILD  BUILD.bazel  java17.bazelrc  package.json  preset.bazelrc  repin  workspace_status.sh
tools/format/: BUILD  BUILD.bazel
tools/gazelle/: BUILD.bazel
tools/lint/: BUILD  linters.bzl
tools/oci/: BUILD  go_image.bzl  py3_image.bzl
tools/pytest/: defs.bzl
