"""
Build supporting tools.

The tools subpackage is used to define build rules and configurations for tools
used throughout the repository. Firstparty tools not required for build support
should live elsewhere.

Of special note is that we're using the `bazel_env.bzl` tool to re-export tools
used under Bazel as a `bin/` tree which can be added to the `$PATH`. The
included `.envrc` automates this for you.

"""

load("@bazel_env.bzl", "bazel_env")
load("@gazelle//:go_tools.bzl", "GO_TOOLS")
load("@multitool//:tools.bzl", MULTITOOL_TOOLS = "TOOLS")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_ruby//ruby:defs.bzl", "rb_binary")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

bazel_env(
    name = "bazel_env",
    toolchains = {
        "jdk": "@rules_java//toolchains:current_host_java_runtime",
        "nodejs": "@nodejs_toolchains//:resolved_toolchain",
        "prettier": "//tools/format:prettier",
    },
    tools = {
        # Mapping from tool binary name ($PATH entry) to Bazel label
        "buildifier": "@buildifier_prebuilt//:buildifier",
        "format": "//tools/format:format",
        "cargo": "@rules_rust//tools/upstream_wrapper:cargo",
        "uv": "@uv//:uv",
        "go": "@rules_go//go",
        "jar": "$(JAVABASE)/bin/jar",
        "java": "$(JAVA)",
        "node": "$(NODE_PATH)",
        "npm": "$(NPM_PATH)",
        "pnpm": "@pnpm",
        "bundle": "@ruby//:bundle",
        "gem": "@ruby//:gem",
        "ruby": "@ruby",
    } | MULTITOOL_TOOLS | GO_TOOLS,
)

rb_binary(
    name = "grpc_tools_ruby_protoc_plugin",
    main = "@bundle//bin:grpc_tools_ruby_protoc_plugin",
    deps = ["@bundle"],
)
